Fix keyboard on the bottom on chat, display course supports in collapse

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -113,7 +113,8 @@ footer {
     flex-direction: column;
     height: 100%;
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: hidden;
+    overflow-x: hidden;
   }
 
   #courses-support-section h5{
@@ -167,23 +168,49 @@ footer {
   #courses-support-section {
     background-color: rgba(0, 0, 0, 0.2);
     padding: 1.5rem 2rem;
-    margin-bottom: 3rem;
+    margin-bottom: .5rem;
+  }
+
+  #discuss-header {
+    height: 2.5rem;
   }
 
   #discuss-body-section {
     margin-left: 5em;
-    margin-right: 3em;
+    margin-right: 0em;
     color: #222222;
     border-radius: 5px;
     flex: 1;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 
-  #chat-view {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgba(219, 218, 218,0);
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: white; 
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: white; 
+  }
+
+  /* #chat-view {
     display: flex;
     flex-direction: column;
     flex: 1;
     position: relative;
-  }
+  } */
 
   .btn-danger {
     background-color: #ffc03c;
