--- a/public/css/media.css
+++ b/public/css/media.css
@@ -192,7 +192,6 @@
 	#discuss-body-section {
 		margin-left: 0 !important;
 		margin-right: 0 !important;
-		margin-top: 1rem !important;
 	}
 
 	#discuss-form .col-md-11{
